# type_utilities

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: bool.rs  hashmap.rs  lib.rs  option.rs  result.rs  slice.rs  strings.rs  vec.rs
src/bool/: methods.rs
src/option/: methods.rs
src/result/: methods.rs
src/slice/: methods.rs
src/strings/: methods.rs  string_methods.rs
src/vec/: methods.rs
