[package]
name = "type_utilities"
version = "0.1.1"
edition = "2021"
authors = ["Josue <josuebarretogit@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/josueBarretogit/type_utilities"
repository = "https://github.com/josueBarretogit/type_utilities"
description = "Implementing more methods to rust type primitives "
keywords = ["utils", "utilities"]
categories = ["utilities"]
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]


[dependencies]

[lib]
doctest = false

[features]
all_types = ["strings", "vec", "bool", "option", "result"]
strings = []
vec = []
bool = []
option = []
result = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
